--- a/src/IvyFEMProtoApp/IvyFEMProtoApp/packages.config
+++ b/src/IvyFEMProtoApp/IvyFEMProtoApp/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="OpenTK" version="3.0.0" targetFramework="net461" />
-  <package id="OpenTK.GLControl" version="3.0.0" targetFramework="net461" />
+  <package id="OpenTK" version="3.0.1" targetFramework="net461" />
+  <package id="OpenTK.GLControl" version="3.0.1" targetFramework="net461" />
+  <package id="OxyPlot.Core" version="2.0.0-unstable1035" targetFramework="net461" />
+  <package id="OxyPlot.Wpf" version="2.0.0-unstable1035" targetFramework="net461" />
 </packages>
