--- a/src/IvyFEMProtoApp/IvyFEMProtoApp/IvyFEMProtoApp.csproj
+++ b/src/IvyFEMProtoApp/IvyFEMProtoApp/IvyFEMProtoApp.csproj
@@ -59,6 +59,8 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <Prefer32Bit>true</Prefer32Bit>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <Optimize>false</Optimize>
+    <WarningLevel>2</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <OutputPath>bin\x64\Release\</OutputPath>
@@ -69,6 +71,7 @@
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <Prefer32Bit>true</Prefer32Bit>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="OpenTK, Version=3.0.1.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL">
@@ -117,8 +120,11 @@
       <DependentUpon>ChartWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="ColorLegend.cs" />
-    <Compile Include="Linear.LapackBandEquationSolver.cs" />
-    <Compile Include="Linear.LapackDenseEquationSolver.cs" />
+    <Compile Include="Lapack.ComplexHermitianBandMatrix.cs" />
+    <Compile Include="Lapack.DoubleSymmetricBandMatrix.cs" />
+    <Compile Include="Linear.Constants.cs" />
+    <Compile Include="Linear.Functions.cs" />
+    <Compile Include="Linear.LapackEquationSolver.cs" />
     <Compile Include="Linear.ComplexSparseMatrix.cs" />
     <Compile Include="Linear.DoubleSparseMatrix.cs" />
     <Compile Include="EdgeFieldDrawer.cs" />
@@ -170,6 +176,8 @@
     <Compile Include="CadObjectArray.cs" />
     <Compile Include="Camera.cs" />
     <Compile Include="DrawerArray.cs" />
+    <Compile Include="Native.Functions.cs" />
+    <Compile Include="Native.ImportedFunctions.cs" />
     <Compile Include="OpenGLUtils.cs" />
     <Compile Include="CadObject2DDrawPart.cs" />
     <Compile Include="Edge2D.cs" />
@@ -190,7 +198,8 @@
     <Compile Include="SelectedObject.cs" />
     <Compile Include="MeshTri2D.cs" />
     <Compile Include="MeshTriArray2D.cs" />
-    <Compile Include="SaintVenantKirchhoffHyperelasticMaterial.cs" />
+    <Compile Include="SaintVenantHyperelasticMaterial.cs" />
+    <Compile Include="Linear.IvyFEMEquationSolver.cs" />
     <Compile Include="TriangleFE.cs" />
     <Compile Include="VectorFieldDrawer.cs" />
     <Compile Include="VectorFieldDrawPart.cs" />
@@ -268,6 +277,9 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="IvyFEM.Native.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="libblas.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
