--- a/src/IvyFEMProtoApp/IvyFEMProtoApp/IvyFEMProtoApp.csproj
+++ b/src/IvyFEMProtoApp/IvyFEMProtoApp/IvyFEMProtoApp.csproj
@@ -123,6 +123,7 @@
     <Compile Include="Constraint.cs" />
     <Compile Include="ConstraintDrawer.cs" />
     <Compile Include="ConstraintDrawerArray.cs" />
+    <Compile Include="Elastic2DBaseFEM.TwoBodyContactMortar.cs" />
     <Compile Include="Elastic2DBaseFEM.TwoBodyContact.cs" />
     <Compile Include="Elastic2DBaseFEM.MultipointConstraint.cs" />
     <Compile Include="Elastic2DDerivedBaseFEM.cs" />
