ポート番号描画、ズーム、パン、回転、プロパティ表示、 IvyFEM.dll(0.0.0.2対応)

--- a/src/IvyFEMProtoApp/IvyFEMProtoApp/IvyFEMProtoApp.csproj
+++ b/src/IvyFEMProtoApp/IvyFEMProtoApp/IvyFEMProtoApp.csproj
@@ -129,7 +129,7 @@
     <Compile Include="ChartWindow.xaml.cs">
       <DependentUpon>ChartWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="EdgeCollection.cs" />
+    <Compile Include="PortEdge.cs" />
     <Compile Include="Problem .ElasticTwoBodyContact.cs" />
     <Compile Include="Problem .ElasticContact.cs" />
     <Compile Include="Problem .HyperelasticTwoBodyContact.cs" />
