--- a/src/IvyFEMProtoApp/IvyFEMProtoApp/IvyFEMProtoApp.csproj
+++ b/src/IvyFEMProtoApp/IvyFEMProtoApp/IvyFEMProtoApp.csproj
@@ -137,6 +137,8 @@
       <DependentUpon>MeshWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="PortEdge.cs" />
+    <Compile Include="Problem.PCWaveguide1.cs" />
+    <Compile Include="Problem.PCWaveguide0.cs" />
     <Compile Include="Problem.PressurePoissonFluidRK2.cs" />
     <Compile Include="Problem.PressurePoissonFluidRK1.cs" />
     <Compile Include="Problem.PressurePoissonFluid2.cs" />
