フォトニック結晶導波路　三角形格子＆エアホール型(TMモード) 60ベンド計算例追加

--- a/src/IvyFEMProtoApp/IvyFEMProtoApp/IvyFEMProtoApp.csproj
+++ b/src/IvyFEMProtoApp/IvyFEMProtoApp/IvyFEMProtoApp.csproj
@@ -142,8 +142,10 @@
     <Compile Include="NonlinerOptimizingProblem.cs" />
     <Compile Include="PortEdge.cs" />
     <Compile Include="Problem.OptimizeProblem1.cs" />
-    <Compile Include="Problem.PCWaveguide1.cs" />
-    <Compile Include="Problem.PCWaveguide0.cs" />
+    <Compile Include="Problem.PCWaveguideTriangleLattice1.cs" />
+    <Compile Include="Problem.PCWaveguideTriangleLattice0.cs" />
+    <Compile Include="Problem.PCWaveguideSquareLattice1.cs" />
+    <Compile Include="Problem.PCWaveguideSquareLattice0.cs" />
     <Compile Include="Problem.PressurePoissonWithBellFluid2.cs" />
     <Compile Include="Problem.PressurePoissonWithBellFluid1.cs" />
     <Compile Include="Problem.PressurePoissonFluidRK2.cs" />
